// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home rendered with all possible props 1`] = `
<Fragment>
  <Loading
    className="className"
    isLoading={false}
  >
    <div
      style={
        Object {
          "backgroundImage": "url(https://www.example.com/eifel.jpg)",
          "backgroundSize": "cover",
        }
      }
    />
  </Loading>
  <img
    alt="Profile photo"
    hidden={true}
    onError={[Function]}
    onLoad={[Function]}
    src="https://www.example.com/eifel.jpg"
  />
</Fragment>
`;

exports[`Home rendered with minimum set of props 1`] = `
<Fragment>
  <Loading
    className=""
    isLoading={false}
  >
    <div
      style={
        Object {
          "backgroundImage": "url(https://www.example.com/eifel.jpg)",
          "backgroundSize": "contain",
        }
      }
    />
  </Loading>
  <img
    hidden={true}
    onError={[Function]}
    onLoad={[Function]}
    src="https://www.example.com/eifel.jpg"
  />
</Fragment>
`;
